--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Roboto Mono',monospace;
+  font-size: 40px;
   text-align: center;
   background-image: url('../img/fundo.png');
   background-color: #000000;
@@ -7,6 +8,14 @@ body {
   background-position: center top;
   background-repeat: no-repeat;
   color: white;
+  margin-top: 1%;
+}
+
+body h1{
+  font-size: 140px;
+  font-variant: small-caps;
+  color: red !important;
+  font-style: italic;
 }
 
 body img{
